add changes to css and html

--- a/style.css
+++ b/style.css
@@ -34,23 +34,23 @@ button:hover {
 }
 
 .container {
-    width: 100%;
+    /* width: 100%; */
     max-width: 1550px;
     margin-left: auto;
     margin-right: auto;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 135px;
+    padding-right: 135px;
   }
 
 .header__container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     height: 80px;
     border: 1px solid  hsla(0, 0%, 74%, 1);
     border-right: none;
     border-left: none;
-    width: 100%;
+    /* width: 100%; */
 }
 
 .navigation__links {
@@ -99,10 +99,11 @@ button:hover {
 }
 
 .divider {
-    width: 45px;
-    border: 2px solid hsla(0, 3%, 86%, 1);
-    margin-left: 725px;
-    margin-bottom: 40px;
+    max-width: 45px;
+    height: 4px;
+    margin: 0 auto 10px auto;
+    background-color: gray;
+    /* margin-bottom: 40px; */
 }
 
 .hero__text {
@@ -113,11 +114,28 @@ button:hover {
     margin-bottom: 60px;
 }
 
-.card__section {
+.card-section {
+    width: 100%;
+}
+
+.card-section__item {
+    cursor: pointer;
+}
+
+.team-list__image {
+    width: 100%;
+    max-width: 270px;
+    height: auto;
+}
+
+.team-list {
+    list-style: none;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
     gap: 30px;
 }
+
 
 .team-list__heading {
     font-size: 18px;
@@ -133,9 +151,75 @@ button:hover {
     line-height: 21.6px;
 }
 
+.container-overlay {
+    position: relative;
+    /* width: 50%; */
+}
+
+/* cards-overlay  */
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    max-width: 270px;
+    max-height: 270px;
+    width: 100%;
+    height: auto;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #008CBA;
+}
+  
+.container-overlay:hover .overlay {
+    opacity: 1;
+}
+  
+.overlay-icon-3 {
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 100%;
+    max-width: 42px;
+    height: auto;
+}
+
+.overlay-icon-2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+    max-width: 42px;
+    height: auto;
+    width: 100%;
+}
+
+.overlay-icon-1 {
+    position: absolute;
+    top: 50%;
+    left: 70%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
+    max-width: 42px;
+    height: auto;
+    width: 100%;
+}
+
 .footer {
     text-align: center;
     margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .footer__container {
@@ -155,4 +239,48 @@ button:hover {
     gap: 30px;
     padding-bottom: 28px;
 
+}
+
+.social-media-links {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+
+
+/* footer overlay */
+
+.container-overlay-footer {
+    position: relative;
+    /* width: 50%; */
+}
+
+.overlay-footer {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    max-width: 42px;
+    max-height: 42px;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+}
+  
+.container-overlay-footer:hover .overlay-footer {
+    opacity: 1;
+}
+  
+.overlay-link--1 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    text-align: center;
 }
